--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,29 @@
-flask
-flask_sqlalchemy
-flask_security
-flask_caching
-gunicorn
-setuptools
+blinker==1.9.0
+cachelib==0.13.0
+click==8.1.7
+colorama==0.4.6
+dnspython==2.7.0
+email_validator==2.2.0
+Flask==3.1.0
+Flask-Caching==2.3.1
+flask-cors==5.0.1
+Flask-Login==0.6.3
+Flask-Principal==0.4.0
+Flask-Security==5.6.1
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+greenlet==3.1.1
+idna==3.10
+importlib_resources==6.5.2
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==3.0.2
+mysql-connector-python==9.2.0
+passlib==1.7.4
+protobuf==6.30.2
+setuptools==78.1.0
+six==1.17.0
+SQLAlchemy==2.0.40
+typing_extensions==4.13.1
+Werkzeug==3.1.3
+WTForms==3.2.1
